--- a/vtr-ui/src/app/components/widgets/widget-macrokey-settings/widget-macrokey-settings.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-macrokey-settings/widget-macrokey-settings.component.scss
@@ -58,6 +58,17 @@
 		@media #{$breakpoint_sm} {
 			padding: 2rem;
 		}
+
+		@media #{$white-on-black} {
+			border: 0.1rem solid $light;
+			background: $dark;
+			background-image: none;
+		}
+		@media #{$black-on-white} {
+			border: 0.1rem solid $dark;
+			background: $light;
+			background-image: none;
+		}
 	}
 }
 
